--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
    volumes:
     - mongo-db:/data/db
   webapp:
+   image: osamazazatestcrew/osamadockerproject
    container_name: mySpecialContainer1
-   build: osamazazatestcrew/osamadockerproject
    working_dir: /app
    env_file:
    - ./.env
