--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
    volumes:
     - mongo-db:/data/db
   webapp:
-   image: osamazazatestcrew/osamadockerproject
+   image: osamazazatestcrew/osamadockerproject:latest
    container_name: mySpecialContainer1
    working_dir: /app
    env_file:
