--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
 services:
   webapp:
-    image: osamazazatestcrew/osamadockerproject:latest
+    image: osamazazatestcrew/osamadockerproject
     command: npm run start-dev
