--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,17 +40,12 @@ services:
      parallelism: 2
      delay: 30s
     restart_policy:
-     condition: on_failure
+     condition: on-failure
      delay: 5s 
-
-
    image: osamazazatestcrew/osamadockerimage
-   container_name: mySpecialContainer1
    working_dir: /app
    env_file:
    - ./.env
-   ports:
-   - "4000:4000"
    depends_on:
    - redis
 
